style: add dimension on the imgs

--- a/resources/scss/app.scss
+++ b/resources/scss/app.scss
@@ -27,3 +27,14 @@
     overflow: auto;
     width: calc(100% - 118px);
 }
+
+
+// dimensioni immagini index
+.thumb-mini{
+    width: 50px;
+}
+
+// dimensione img nello show
+.img-show{
+    width:300px;
+}
